objects/lightsideapps__Auto_Approval__c.object
<CustomObject>
    <fields>
        <fullName>lightsideapps__Action__c</fullName>
        <inlineHelpText>Approve, Reject or Recall the Approval Process</inlineHelpText>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lightsideapps__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Approval_Duration_Type__c</fullName>
        <description>Allowed values are:  Total Minutes, Business Minutes, Total Hours, Business Hours</description>
        <inlineHelpText>Select the Type of Duration to Approve by.</inlineHelpText>
        <label>Approval Duration Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Total Hours</fullName>
                </value>
                <value>
                    <fullName>Total Minutes</fullName>
                </value>
                <value>
                    <fullName>Business Hours</fullName>
                </value>
                <value>
                    <fullName>Business Minutes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lightsideapps__Approval_Duration__c</fullName>
        <inlineHelpText>The minutes or hours that the Approval Automation for this object will run after.</inlineHelpText>
        <label>Approval Duration</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lightsideapps__BusinessMinutesBeforeAutoSign__c</fullName>
        <inlineHelpText>The number of Business Mins before the Approval Automation should be run. Business Mins is based on the Default Organization Business Hours.</inlineHelpText>
        <label>Business Minutes Before Auto Sign</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Comments__c</fullName>
        <label>Approval Comments</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Mins_Before_AutoSign__c</fullName>
        <inlineHelpText>The number of Total Elapsed Mins before the Approval Automation should be run.</inlineHelpText>
        <label>Minutes Before Auto Sign</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Object__c</fullName>
        <inlineHelpText>The Object Type of the Record that the Approval Automation will be run on.</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Sign_on_Behalf_of_Field__c</fullName>
        <inlineHelpText>The User Field on the Record where that User is nominated at the Step for Approval Automation. This field is only available if a User Field has been found on the selected Object.</inlineHelpText>
        <label>Sign on Behalf of Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Sign_on_Behalf_of_Queue_Label__c</fullName>
        <inlineHelpText>The Queue nominated at the Step to Auto Approve or Reject. This field is only available if Queue&apos;s have been setup.</inlineHelpText>
        <label>Sign on Behalf of Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Sign_on_Behalf_of_Queue__c</fullName>
        <inlineHelpText>The Queue nominated at the Step to Auto Approve or Reject. This field is only available if Queue&apos;s have been setup.</inlineHelpText>
        <label>Sign on Behalf of Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Sign_on_Behalf_of_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The User nominated at the Step for Approval Automation</inlineHelpText>
        <label>Sign on Behalf of User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Auto_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Approval Automation</label>
    <listViews>
        <fullName>lightsideapps__All</fullName>
        <columns>NAME</columns>
        <columns>lightsideapps__Active__c</columns>
        <columns>lightsideapps__Action__c</columns>
        <columns>lightsideapps__Object__c</columns>
        <columns>lightsideapps__Approval_Duration__c</columns>
        <columns>lightsideapps__Approval_Duration_Type__c</columns>
        <columns>lightsideapps__Sign_on_Behalf_of_Field__c</columns>
        <columns>lightsideapps__Sign_on_Behalf_of_Queue__c</columns>
        <columns>lightsideapps__Sign_on_Behalf_of_User__c</columns>
        <columns>lightsideapps__Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>lightsideapps__All_Active</fullName>
        <columns>NAME</columns>
        <columns>lightsideapps__Active__c</columns>
        <columns>lightsideapps__Action__c</columns>
        <columns>lightsideapps__Object__c</columns>
        <columns>lightsideapps__BusinessMinutesBeforeAutoSign__c</columns>
        <columns>lightsideapps__Mins_Before_AutoSign__c</columns>
        <columns>lightsideapps__Sign_on_Behalf_of_Field__c</columns>
        <columns>lightsideapps__Sign_on_Behalf_of_Queue__c</columns>
        <columns>lightsideapps__Sign_on_Behalf_of_User__c</columns>
        <columns>lightsideapps__Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>lightsideapps__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active</label>
    </listViews>
    <nameField>
        <label>AutoApproval Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Automations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>lightsideapps__Minutes_Mutualls_exclusive</fullName>
        <active>true</active>
        <errorConditionFormula>AND 
( 
!ISBLANK(lightsideapps__BusinessMinutesBeforeAutoSign__c),
!ISBLANK(lightsideapps__Mins_Before_AutoSign__c)
)</errorConditionFormula>
        <errorMessage>Business Minutes Before Auto Sign and Mins Before Auto Sign are mutually exclusive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>lightsideapps__Minutes_Required</fullName>
        <active>true</active>
        <description>Ensures that either Minutes before sign or Business Minutes before sign are completed.</description>
        <errorConditionFormula>AND
(
ISBLANK(lightsideapps__BusinessMinutesBeforeAutoSign__c),
ISBLANK(lightsideapps__Mins_Before_AutoSign__c)
)</errorConditionFormula>
        <errorMessage>Business Minutes before Autosign or Minutes before Autosign must have a value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>lightsideapps__Sign_On_Behalf_of_User_Mutually_Exclusiv</fullName>
        <active>true</active>
        <errorConditionFormula>OR(

AND( 
  NOT(ISBLANK(lightsideapps__Sign_on_Behalf_of_Field__c)), 
  OR(
    NOT(ISBLANK(lightsideapps__Sign_on_Behalf_of_Queue__c)), 
    NOT(ISBLANK(lightsideapps__Sign_on_Behalf_of_User__c)) 
    )
  ),
AND( 
  NOT(ISBLANK(lightsideapps__Sign_on_Behalf_of_Queue__c)), 
  OR(
    NOT(ISBLANK(lightsideapps__Sign_on_Behalf_of_Field__c)), 
    NOT(ISBLANK(lightsideapps__Sign_on_Behalf_of_User__c))
  )
),
AND( 
  NOT(ISBLANK(lightsideapps__Sign_on_Behalf_of_User__c)), 
  OR(
    NOT(ISBLANK(lightsideapps__Sign_on_Behalf_of_Field__c)), 
    NOT(ISBLANK(lightsideapps__Sign_on_Behalf_of_Queue__c))
  )
)
)</errorConditionFormula>
        <errorMessage>Sign on Behalf of User, Sign on Behalf of Field and Sign on Behalf of Queue are mutually exclusive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>lightsideapps__Sign_on_Behalf_of_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
 lightsideapps__Sign_on_Behalf_of_Field__c == null,
 lightsideapps__Sign_on_Behalf_of_Queue__c == null,
 lightsideapps__Sign_on_Behalf_of_User__c == null 
)</errorConditionFormula>
        <errorMessage>You must select a User, Field or Queue to sign on behalf of.</errorMessage>
    </validationRules>
</CustomObject>